sorted by price functional now

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <section>
             <div class="my-8 flex justify-between">
                 <h3 class="font-bold text-xl">Best Deal For you</h3>
-                <button class="btn btn-success text-white bg-[#0E7A81] border-none shadow-none">Sort By Price</button>
+                <button id="sortButton" class="btn btn-success text-white bg-[#0E7A81] border-none shadow-none">Sort By Price</button>
 
             </div>
             <div class="flex  gap-8">
