--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                 </div>
                 <div id="likedPetsCardContainer"
-                    class="grid lg:grid-cols-2 grid-cols-1 grid-rows-7 card shadow-sm  w-90 h-200 gap-2 p-5 ">
+                    class="grid lg:grid-cols-2 grid-cols-1 lg:grid-rows-7 grid-rows-4  card shadow-sm  w-90 h-200 gap-2 p-5 ">
 
 
                 </div>
